Fix hero wrapper margin getting out of bounds

--- a/.dev/sass/partials/_hero.scss
+++ b/.dev/sass/partials/_hero.scss
@@ -12,6 +12,7 @@
 		padding: 8% 25px;
 		text-align: right;
 		color: #fff;
+		margin-right: 0;
 	}
 
 	@media #{$medium-up} {
